logs/geonode-qgis-server.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/geonode_qgis_server'...
Listing './lib/python3.5/site-packages/geonode_qgis_server/migrations'...
Listing './lib/python3.5/site-packages/geonode_qgis_server/static'...
Listing './lib/python3.5/site-packages/geonode_qgis_server/static/css'...
Listing './lib/python3.5/site-packages/geonode_qgis_server/static/js'...
Listing './lib/python3.5/site-packages/geonode_qgis_server/tasks'...
Listing './lib/python3.5/site-packages/geonode_qgis_server/templates'...
Listing './lib/python3.5/site-packages/geonode_qgis_server/templates/geonode_qgis_server'...
Compiling './lib/python3.5/site-packages/geonode_qgis_server/views.py'...
***   File "./lib/python3.5/site-packages/geonode_qgis_server/views.py", line 617
    print key
            ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/geonode_qgis_server-0.1.1.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
